fix letter wrapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,9 +38,4 @@ $bg-white: #e6f1ff;
   max-width: 1024px;
 }
 
-@media (max-width: 810px) {
-  .wrapper {
-    padding: 0 2rem;
-    text-align: center;
-  }
-}
+
